--- a/assets/style.css
+++ b/assets/style.css
@@ -14,10 +14,11 @@ body {
     text-align: center;
     padding: 0;
     height: 100%;
+    margin: 0;
  }
 
  header {
-    padding-top: 40px;
+    padding-top: 15px;
     float: left;
     background: #ffffff;
     border-bottom: 2px solid #cccccc;
@@ -51,13 +52,6 @@ body {
      
  }
 
- #about,
- #portfolio,
- #connect 
-  {
-     float: right;
- }
-
 
 .mainbox {
     width: 650px;
@@ -80,9 +74,20 @@ body {
     /* border: 1px solid red; */
     float: right;
 
+
 }
 .sideheader > a{
-    padding: 10px;
+    padding-right: 10px;
+    color:inherit;
+    text-decoration: none;
+    
+}
+.ab, 
+.port
+{
+    border-right: 1px solid #cccccc;
+    margin-right: 5px;
+    margin-left: 5px;
     
 }
 
@@ -105,6 +110,37 @@ body {
     margin-right: 20px;
     margin-bottom: 10px;
     width: 200px;
+
+}
+
+.pic {
+    width: 250px;
+    margin: 20px;
+    
+    
+}
+
+.portfolio-pic {
+    position: relative;
+    width: 250px;
+    margin-right: 20px;
+    display: inline-block;
+   
+
+}
+
+.pictext {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    color: #ffffff;
+    background-color: #4aaaa5;
+    bottom: 40px;
+    left: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+  
 
 }
 
@@ -158,10 +194,11 @@ footer {
     margin-top: 10px;
     padding: 40px;
     color: #cccccc;
+    
     /* add the sticky margin at the end */
 }
 
-.container,
+
 .push {
     height: 50px;
 }
